[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scene/ItemContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Background.png" type="Texture" id=2]
[ext_resource path="res://Scene/ColContainer.gd" type="Script" id=3]
[ext_resource path="res://Scene/EmptyContainer.tscn" type="PackedScene" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="MainControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.2449
margin_top = 30.0
margin_right = -27.7551
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
self_modulate = Color( 1, 1, 1, 0.360784 )
material = SubResource( 1 )
margin_right = 1860.0
margin_bottom = 1020.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_right = 1800.0
margin_bottom = 960.0
script = ExtResource( 3 )
ItemContainer = ExtResource( 1 )
EmptyContainer = ExtResource( 4 )

[node name="Col1" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/ColContainer"]
margin_right = 597.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Col2" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/ColContainer"]
margin_left = 601.0
margin_right = 1198.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Col3" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/ColContainer"]
margin_left = 1202.0
margin_right = 1800.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3
